// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Nav test suite Render logged in navbar 1`] = `
<Toolbar
  noGutter={false}
>
  <ToolbarGroup
    firstChild={false}
    lastChild={false}
  >
    <Link
      replace={false}
      to="/"
    >
      <IconButton
        disableTouchRipple={false}
        disabled={false}
        iconStyle={Object {}}
        tooltip="Home"
        tooltipPosition="bottom-center"
        touch={false}
      >
        <ActionHome />
      </IconButton>
    </Link>
    <ToolbarTitle
      text="My House"
    />
  </ToolbarGroup>
  <ToolbarGroup
    firstChild={false}
    lastChild={false}
  >
    <ToolbarGroup
      firstChild={false}
      lastChild={false}
    />
    <IconMenu
      anchorOrigin={
        Object {
          "horizontal": "right",
          "vertical": "bottom",
        }
      }
      animated={true}
      iconButtonElement={
        <IconButton
          disableTouchRipple={false}
          disabled={false}
          iconStyle={Object {}}
          tooltip="Menu"
          tooltipPosition="bottom-center"
          touch={false}
        >
          <NavigationMenu />
        </IconButton>
      }
      multiple={false}
      onClick={[Function]}
      onItemTouchTap={[Function]}
      onKeyboardFocus={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onRequestChange={[Function]}
      open={null}
      targetOrigin={
        Object {
          "horizontal": "right",
          "vertical": "top",
        }
      }
      touchTapCloseDelay={200}
      useLayerForClickAway={false}
    >
      <div>
        <Link
          replace={false}
          style={
            Object {
              "textDecoration": "none",
            }
          }
          to="/MyAccount"
        >
          <MenuItem
            anchorOrigin={
              Object {
                "horizontal": "right",
                "vertical": "top",
              }
            }
            checked={false}
            desktop={false}
            disabled={false}
            focusState="none"
            insetChildren={false}
            targetOrigin={
              Object {
                "horizontal": "left",
                "vertical": "top",
              }
            }
          >
            <UserChip
              user={
                Object {
                  "displayName": "logged in user",
                  "email": "logged@in.com",
                  "token": "superRealToken",
                  "userId": "loggedInUser",
                }
              }
            />
          </MenuItem>
        </Link>
        <Link
          replace={false}
          style={
            Object {
              "textDecoration": "none",
            }
          }
          to="/Households"
        >
          <MenuItem
            anchorOrigin={
              Object {
                "horizontal": "right",
                "vertical": "top",
              }
            }
            checked={false}
            desktop={false}
            disabled={false}
            focusState="none"
            insetChildren={false}
            targetOrigin={
              Object {
                "horizontal": "left",
                "vertical": "top",
              }
            }
          >
             Households 
          </MenuItem>
        </Link>
        <a
          onClick={[Function]}
          style={
            Object {
              "textDecoration": "none",
            }
          }
        >
          <MenuItem
            anchorOrigin={
              Object {
                "horizontal": "right",
                "vertical": "top",
              }
            }
            checked={false}
            desktop={false}
            disabled={false}
            focusState="none"
            insetChildren={false}
            targetOrigin={
              Object {
                "horizontal": "left",
                "vertical": "top",
              }
            }
          >
            Logout
          </MenuItem>
        </a>
      </div>
    </IconMenu>
  </ToolbarGroup>
</Toolbar>
`;

exports[`Nav test suite Render logged out navbar 1`] = `
<Toolbar
  noGutter={false}
>
  <ToolbarGroup
    firstChild={false}
    lastChild={false}
  >
    <Link
      replace={false}
      to="/"
    >
      <IconButton
        disableTouchRipple={false}
        disabled={false}
        iconStyle={Object {}}
        tooltip="Home"
        tooltipPosition="bottom-center"
        touch={false}
      >
        <ActionHome />
      </IconButton>
    </Link>
    <ToolbarTitle
      text="My House"
    />
  </ToolbarGroup>
  <ToolbarGroup
    firstChild={false}
    lastChild={false}
  >
    <IconMenu
      anchorOrigin={
        Object {
          "horizontal": "right",
          "vertical": "bottom",
        }
      }
      animated={true}
      iconButtonElement={
        <IconButton
          disableTouchRipple={false}
          disabled={false}
          iconStyle={Object {}}
          tooltip="Menu"
          tooltipPosition="bottom-center"
          touch={false}
        >
          <NavigationMenu />
        </IconButton>
      }
      multiple={false}
      onClick={[Function]}
      onItemTouchTap={[Function]}
      onKeyboardFocus={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onRequestChange={[Function]}
      open={null}
      targetOrigin={
        Object {
          "horizontal": "right",
          "vertical": "top",
        }
      }
      touchTapCloseDelay={200}
      useLayerForClickAway={false}
    >
      <div>
        <Link
          replace={false}
          style={
            Object {
              "textDecoration": "none",
            }
          }
          to="/Login"
        >
          <MenuItem
            anchorOrigin={
              Object {
                "horizontal": "right",
                "vertical": "top",
              }
            }
            checked={false}
            desktop={false}
            disabled={false}
            focusState="none"
            insetChildren={false}
            targetOrigin={
              Object {
                "horizontal": "left",
                "vertical": "top",
              }
            }
          >
            Sign In 
          </MenuItem>
        </Link>
        <Link
          replace={false}
          style={
            Object {
              "textDecoration": "none",
            }
          }
          to="/Register"
        >
          <MenuItem
            anchorOrigin={
              Object {
                "horizontal": "right",
                "vertical": "top",
              }
            }
            checked={false}
            desktop={false}
            disabled={false}
            focusState="none"
            insetChildren={false}
            targetOrigin={
              Object {
                "horizontal": "left",
                "vertical": "top",
              }
            }
          >
             Sign Up
          </MenuItem>
        </Link>
      </div>
    </IconMenu>
  </ToolbarGroup>
</Toolbar>
`;
